# office-jinja

./: .gitattributes  .gitignore  pyproject.toml
src/office_jinja/: cli.py  models.py  render_docx.py  render_xlsx.py
templates/: demo_1.docx  demo_1.xlsx  demo_1.yaml
